--- a/Resources/Prototypes/_Impstation/Entities/Objects/Weapons/Guns/Projectiles/blasterbolts.yml
+++ b/Resources/Prototypes/_Impstation/Entities/Objects/Weapons/Guns/Projectiles/blasterbolts.yml
@@ -16,7 +16,9 @@
       types:
         Heat: 28
     soundHit:
-      collection: WeakHit
+      path: "/Audio/_Impstation/Weapons/Guns/Hits/energyhit.ogg"
+      params:
+        variation: 0.05
     forceSound: true
 
 - type: entity
@@ -32,7 +34,9 @@
       types:
         Heat: 15
     soundHit:
-      collection: WeakHit
+      path: "/Audio/_Impstation/Weapons/Guns/Hits/energyhit.ogg"
+      params:
+        variation: 0.05
     forceSound: true
 
 - type: entity
@@ -62,7 +66,9 @@
       types:
         Heat: 10
     soundHit:
-      collection: WeakHit
+      path: "/Audio/_Impstation/Weapons/Guns/Hits/energyhit.ogg"
+      params:
+        variation: 0.05
     forceSound: true
 
 - type: entity
